clang/test/BSC/Negative/OwnedStruct/destructor/invalid_return_type_destructor.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {    // expected-note {{previous definition is here}}
  int ~A(A this) { // expected-error {{destructor cannot have a return type}}
  }

};


owned struct A {    // expected-error {{redefinition of 'A'}}
  void ~A(A this) { // expected-error {{destructor cannot have a return type}}
  }

};